// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Filters renders 1`] = `
<div
  className="navbar-nav mr-auto"
/>
`;

exports[`Filters renders filters 1`] = `
<div
  className="navbar-nav mr-auto"
>
  <NavLink
    activeClassName="active"
    ariaCurrent="true"
    className="nav-item nav-link"
    exact={true}
    key="foo"
    to={
      Object {
        "pathname": "/",
        "state": Object {
          "clear": true,
        },
      }
    }
  >
    Foo
  </NavLink>
  <NavLink
    activeClassName="active"
    ariaCurrent="true"
    className="nav-item nav-link"
    exact={false}
    key="bar"
    to={
      Object {
        "pathname": "/bar",
        "state": Object {
          "clear": true,
        },
      }
    }
  >
    Bar
  </NavLink>
</div>
`;

exports[`Filters renders with additional classes 1`] = `
<div
  className="foobar navbar-nav mr-auto"
/>
`;

exports[`Filters renders with additional props 1`] = `
<div
  className="navbar-nav mr-auto"
  id="foobar"
/>
`;
